--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "antd": "^5.4.6",
     "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
@@ -16,6 +17,7 @@
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   }
 }
