--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
+    "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.0"
